Fixed layout issue with modal container. Refs #173

--- a/vlo-web-app/src/main/less/inc/vlo-aux.less
+++ b/vlo-web-app/src/main/less/inc/vlo-aux.less
@@ -77,3 +77,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     }
 }
 
+.modal-container {
+    display: inline;
+}
